# test_lib

./: .gitignore  CMakeLists.txt  CMakeLists.txt.example
cmake/: ProtobufGen.cmake  dependences.cmake
scripts/: classification.sh
scripts/caffe/: classification.sh  create_link.sh
src/test_boost/: CMakeLists.txt
src/test_boost/asio/: chat_client.cpp  chat_server.cpp
src/test_caffe/: classification.cpp
src/test_dlib/: CMakeLists.txt
src/test_g3log/: CMakeLists.txt  test_g3log.cpp
src/test_gflag/: CMakeLists.txt  test_gflags.cpp
src/test_gtest/: CMakeLists.txt  test_gtest.cpp
src/test_prototo/: CMakeLists.txt  gen.bat
